<resources>
    <string name="app_name">RgisterFormByFragments</string>
    <string name="full_name">full_name</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="retype_password">retype_password</string>
    <string name="gender">gender</string>
    <string name="female">fmale</string>
    <string name="male">male</string>
    <string name="register">register</string>
    <string name="show_info">show_info</string>
    <string name="hide_info">show_info</string>
</resources>