<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <EditText
            android:id="@+id/txtFullName"
            android:layout_width="313dp"
            android:layout_height="53dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="313dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFullName"
            tools:ignore="TextContrastCheck" />


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="313dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            tools:ignore="TextContrastCheck" />


        <EditText
            android:id="@+id/txtPass"
            android:layout_width="313dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtRetypePass"
            android:layout_width="313dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/retype_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRetypePass" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="rbFemale,rbMale" />



        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGender" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toEndOf="@+id/rbFemale"
            app:layout_constraintTop_toTopOf="@+id/rbFemale" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="313dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbFemale"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnShowInfo"
            android:layout_width="313dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_info"
            android:textAllCaps="false"
            app:backgroundTint="#2196F3"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>